fix vertical align in contacts table

--- a/app/styles/components/modules/crm.scss
+++ b/app/styles/components/modules/crm.scss
@@ -66,6 +66,12 @@
           cursor: pointer;
           background-color: #eee;
         }
+
+        .vcenter {
+          display: inline-block;
+          vertical-align: middle;
+          float: none;
+        }
       }
     }
   }
